# weather_station

./: BMP280.c  BMP280.h  CMakeLists.txt  INA219.c  INA219.h  README.md  SHT30.c  SHT30.h  SHT40.c  SHT40.h  cc1101.c  cc1101.h  main.c  nrf24l01.c  nrf24l01.h  radio.c  radio.h  sensors.c  sensors.h
archive/: README.md  nrf24l01.h
